--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Flannel Jesus</title>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,700,700italic,300italic,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
