added something in About Me

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ title: flannelJesus.github.io
 <article>
 <time>{{  site.time | date_to_string }}</time>
 <h2>About Me:</h2>
-<p>I'm currently studying programming &amp design at The Open University</p>
+<p>I'm currently studying programming &amp design at The Open University.</p>
+<p>I am building this site with custom Jekyll templating.</p>
 
 <h2>Recent Posts:</h2>
 <p><em>I am fiddling with Jekyll at the moment. Don't be alarmed.</em></p>
