Fixed CV styling

--- a/cv/index.html
+++ b/cv/index.html
@@ -18,7 +18,14 @@ title: CV
 </ul>
 
 <h2>Experience:</h2>
-<ul class="exp">
-    <li>Web Sales Administrator for Yorkshire Trading<time>Mar 2013 - Present</time></li>
-    <li>Maths tutor at American River College<time>Jan 2009 - 2010</time></li>
-</ul>
+
+<table class="exp">
+    <tr>
+        <td>Web Sales Administrator for Yorkshire Trading</td>
+        <td><time>Mar 2013 - Present</time></td>
+    </tr>
+    <tr>
+        <td>Maths tutor at American River College</td>
+        <td><time>Jan 2009 - 2010</time></td>
+    </tr>
+</table>
