Balderdash first draft (not styled for mobile)

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ $ rm -rf _posts/core-samples
 </ul>
 {% endif %}
 
+<a href="/balderdash">Balderdash</a>
 <h2 id="to-do">To-Do</h2>
 
 <p>This theme is still unfinished. If you’d like to be added as a contributor, <a href="http://github.com/plusjade/jekyll-bootstrap">please fork</a>!
