modification of rules for balderdash

--- a/balderdash/index.html
+++ b/balderdash/index.html
@@ -29,8 +29,19 @@ javascript: balderdash
         <input type="radio" id="rules-toggle" name="word-rules-toggle">
         <div id="rules">
             <h1>Rules</h1>
-            <p>The game begins by all players rolling a die, with the high roll chosen to be the first "dasher". The dasher draws a "definition card" from the supplied box, and rolls the dice to decide which of the words listed there is to be used. Then the dasher writes the definition of the word (as supplied on the card) on a piece of paper. All other players then write down a definition, which may be an honest attempt to supply the correct definition, or, if they do not know or for tactical reasons decide not to, a fictitious definition for the word designed to sound convincing.</p>
-            <p>The players hand their definitions to the dasher. Players submitting the correct definition are immediately awarded three points, and, if there is more than one, the round is abandoned (though the points are retained). The definitions, including the real definition, are then read out in random order. Players record which answer they believe is correct. Players are awarded two points if they guess the correct definition. Players are awarded one point for each other player who incorrectly chooses the fake definition they wrote. The dasher is awarded three points if no one guesses the correct definition. Players move their tokens around the game board one square for each point awarded. The role of dasher then passes to another player. The winner is the individual whose token reaches the end square first.</p>
+            <p>This game requires one phone or tablet which is to be shared between players, and pencil and many small papers for each player.</p>
+            <p>Begin by creating all the Players that are going to be playing. Press 'Start Game'. The player who is highlighted in grey is the first "dasher".</p>
+            <p>Hand the dasher the phone or tablet. That dasher will then click 'Show Word'. The dasher will read the word in Red aloud to all the other players, and spell the word out. Each player will write out on a piece of paper the word, and then they will create a definition for that word including the part of speach (eg noun), a definition, and an example sentence of that word in use. The dasher will do the same, but for the real definition.</p>
+            <p>Each player will hand their definition to the dasher. When all definitions are handed in, the dasher will shuffle them, along with the real one, and then read them each aloud once. When everyone has heard each definition once, the voting round begins.</p>
+            <p>In the voting round, the dasher again reads each definition, but this time each player must choose which one they believe is the real one. The dasher will assign points according to the following rules:</p>
+            <ul>
+                <li>a player gets 1 point for every person that voted for their definition</li>
+                <li>a player gets 2 points of the definition they voted for is the real definition</li>
+                <li>a player gets 3 points if their definition is sufficiently similar to the real definition (be charitable)</li>
+                <li>the dasher gets 3 points if nobody voted for the real definition</li>
+            </ul>
+            <p>At the end of the turn, the dasher presses 'Next Word' and passes the phone or tablet on to the next dasher (highlighted grey). A round consists of each person being the dasher once. The game ends after a set number of rounds, usually 1 or 2. The player with the most points is the winner.</p>
+
         </div>
         <div id="players">
             <h2>Players <button id="add-player" class="btn btn-default">Add Player</button></h2>
