--- a/index.html
+++ b/index.html
@@ -5,36 +5,7 @@ tagline: Just messing about with Jekyll Bootstrap and Twitter Bootstrap
 ---
 {% include JB/setup %}
 
-<p>Read <a href="http://jekyllbootstrap.com/usage/jekyll-quick-start.html">Jekyll Quick Start</a></p>
-
-<p>Complete usage and documentation available at: <a href="http://jekyllbootstrap.com">Jekyll Bootstrap</a></p>
-
-<h2 id="update-author-attributes">Update Author Attributes</h2>
-
-<p>In <code>_config.yml</code> remember to specify your own data:</p>
-
-{% highlight yaml %}
-title : My Blog =)
-
-author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-{% endhighlight %}
-
-<p>The theme should reference these variables whenever needed.</p>
-
-<h2 id="sample-posts">Sample Posts</h2>
-
-<p>This blog contains sample posts which help stage pages and blog data.
-When you don’t need the samples anymore just delete the <code>_posts/core-samples</code> folder.</p>
-
-{% highlight console %}
-$ rm -rf _posts/core-samples
-{% endhighlight %}
-
-<p>Here’s a sample “posts list”.</p>
+<h2 id="sample-posts">Posts</h2>
 
 <ul class="posts">
   {% for post in paginator.posts %} 
@@ -70,7 +41,3 @@ $ rm -rf _posts/core-samples
 {% endif %}
 
 <a href="/balderdash">Balderdash</a>
-<h2 id="to-do">To-Do</h2>
-
-<p>This theme is still unfinished. If you’d like to be added as a contributor, <a href="http://github.com/plusjade/jekyll-bootstrap">please fork</a>!
-We need to clean up the themes, make theme usage guides with theme-specific markup examples.</p>
